--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="navbar">
-      <a href="homepage">
+      <a href="/">
         <div class="logo">
           <img
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmmcaLWUtIoeiCAjZIl4sP523Ma23rbm5_TvWLbxGmkDnePtvIy8wsg8ktiMGAUvt1q6c&usqp=CAU"
@@ -25,68 +25,68 @@
       <div class="nav-bar-niche-header">
         <div class="left-tab">
           <div class="category">
-            <span>Men</span>
+            <span>MEN</span>
             <div class="category-sign"></div>
             <div class="category-hover-div">
               <div class="category-hover-div-right">
-                <a href="#" class="sub-heading">Topwear</a>
+                <a href="products" class="sub-heading">Topwear</a>
                 <a href="products">T-shirt</a>
-                <a href="#">Casual Shirts</a>
-                <a href="#">Formal Shirts</a>
-                <a href="#">Sweatshirts</a>
-                <a href="#">Sweaters</a>
-                <a href="#">Jacket</a>
-                <a href="#">Blazers & Coats</a>
-                <a href="#">Suits</a>
-                <a href="#">Rain Jackets</a>
+                <a href="products">Casual Shirts</a>
+                <a href="products">Formal Shirts</a>
+                <a href="products">Sweatshirts</a>
+                <a href="products">Sweaters</a>
+                <a href="products">Jacket</a>
+                <a href="products">Blazers & Coats</a>
+                <a href="products">Suits</a>
+                <a href="products">Rain Jackets</a>
 
                 <div class="drop_line"></div>
 
-                <a href="#" class="sub-heading">Indian& Festive Wear</a>
-                <a href="#">Kurts& Kurts Sets</a>
-                <a href="#">Sherwanis</a>
-                <a href="#">Nehru Jackets</a>
-                <a href="#">dhotis</a>
+                <a href="products" class="sub-heading">Indian& Festive Wear</a>
+                <a href="products">Kurts& Kurts Sets</a>
+                <a href="products">Sherwanis</a>
+                <a href="products">Nehru Jackets</a>
+                <a href="products">dhotis</a>
 
-                <a href="#" class="sub-heading">Bottomwear</a>
-                <a href="#">Jeans</a>
-                <a href="#">Casual Trousers</a>
-                <a href="#">Formal Trousers</a>
-                <a href="#">Shorts</a>
-                <a href="#">Track Pants & Joggers</a>
+                <a href="products" class="sub-heading">Bottomwear</a>
+                <a href="products">Jeans</a>
+                <a href="products">Casual Trousers</a>
+                <a href="products">Formal Trousers</a>
+                <a href="products">Shorts</a>
+                <a href="products">Track Pants & Joggers</a>
                 <div class="drop_line"></div>
-                <a href="#" class="sub-heading">Innerwear & Sleepwear</a>
-                <a href="#">Briefs & Trunks</a>
-                <a href="#">Boxers</a>
-                <a href="#">Vests</a>
-                <a href="#">Thermals</a>
+                <a href="products" class="sub-heading">Innerwear & Sleepwear</a>
+                <a href="products">Briefs & Trunks</a>
+                <a href="products">Boxers</a>
+                <a href="products">Vests</a>
+                <a href="products">Thermals</a>
                 <div class="drop_line"></div>
-                <a href="#" class="sub-heading">Plus Size</a>
-                <a href="#">T-shirt</a>
-                <a href="#">Casual Shirts</a>
-                <a href="#">Formal Shirts</a>
-                <a href="#">Sweatshirts</a>
+                <a href="products" class="sub-heading">Plus Size</a>
+                <a href="products">T-shirt</a>
+                <a href="products">Casual Shirts</a>
+                <a href="products">Formal Shirts</a>
+                <a href="products">Sweatshirts</a>
                 <div class="drop_line"></div>
-                <a href="#" class="sub-heading">Footwear</a>
-                <a href="#">Sweaters</a>
-                <a href="#">Jacket</a>
-                <a href="#">Blazers & Coats</a>
-                <a href="#">Suits</a>
-                <a href="#">Rain Jackets</a>
+                <a href="products" class="sub-heading">Footwear</a>
+                <a href="products">Sweaters</a>
+                <a href="products">Jacket</a>
+                <a href="products">Blazers & Coats</a>
+                <a href="products">Suits</a>
+                <a href="products">Rain Jackets</a>
                 <div class="drop_line"></div>
 
-                <a href="#" class="sub-heading">PerSonal Care & Grooming</a>
-                <a href="#" class="sub-heading">Sunglasses & Frames</a>
-                <a href="#" class="sub-heading">Watches</a>
-                <a href="#">T-shirt</a>
-                <a href="#">Casual Shirts</a>
-                <a href="#">Formal Shirts</a>
-                <a href="#">Sweatshirts</a>
-                <a href="#">Sweaters</a>
-                <a href="#">Jacket</a>
-                <a href="#">Blazers & Coats</a>
-                <a href="#">Suits</a>
-                <a href="#">Rain Jackets</a>
+                <a href="products" class="sub-heading">PerSonal Care & Grooming</a>
+                <a href="products" class="sub-heading">Sunglasses & Frames</a>
+                <a href="products" class="sub-heading">Watches</a>
+                <a href="products">T-shirt</a>
+                <a href="products">Casual Shirts</a>
+                <a href="products">Formal Shirts</a>
+                <a href="products">Sweatshirts</a>
+                <a href="products">Sweaters</a>
+                <a href="products">Jacket</a>
+                <a href="products">Blazers & Coats</a>
+                <a href="products">Suits</a>
+                <a href="products">Rain Jackets</a>
               </div>
             </div>
           </div>
