--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LOGIN</title>
     <link rel="stylesheet" type="text/css" href="css/login_style.css"/>
     <script src="js/login.js"></script>
 </head>
 <body>
     <div class="navbar">
         <div class="logo">
-            <a href="homepage"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmmcaLWUtIoeiCAjZIl4sP523Ma23rbm5_TvWLbxGmkDnePtvIy8wsg8ktiMGAUvt1q6c&usqp=CAU" width="42px" height="48px"></a>
+            <a href="/"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmmcaLWUtIoeiCAjZIl4sP523Ma23rbm5_TvWLbxGmkDnePtvIy8wsg8ktiMGAUvt1q6c&usqp=CAU" width="42px" height="48px"></a>
         </div>
        <div class="navlink">
            <a href="">MEN</a>
