--- a/public/css/address.css
+++ b/public/css/address.css
@@ -107,6 +107,10 @@
 }
 .left-box-addr{
   background: rgb(230, 65, 65); 
+  width: 93%;
+  color: white;
+  text-align: center;
+  padding: 5px;
   margin: 10px;
    border-radius: 5px; 
    height: 38px;
