--- a/views/address.ejs
+++ b/views/address.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHOPPING BAG</title>
+    <title>ADDRESS</title>
     <link rel="stylesheet" href="css/address.css">
     <script src="js/address.js"></script>
 </head>
@@ -14,7 +14,7 @@
     <div class="layout">
         <div class="header">
             <div class="myntralogo">
-                <a href="homepage"><img
+                <a href="/"><img
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmmcaLWUtIoeiCAjZIl4sP523Ma23rbm5_TvWLbxGmkDnePtvIy8wsg8ktiMGAUvt1q6c&usqp=CAU"
                         width="42px" height="48px"></a>
             </div>
@@ -53,9 +53,9 @@
                 </div>
             </div>
             <div>
-                <div class="left-box-addr">
-                    <div style="text-align: center; padding: 9px;">Add Address</div>
-                </div>
+                
+                    <button class="left-box-addr" onclick="checkadd()" >Add Address</button>
+        
             </div>
         </div>
         <div id="right-box">
