--- a/views/checkoutpage2.ejs
+++ b/views/checkoutpage2.ejs
@@ -13,7 +13,7 @@
     <div class="layout">
         <div class="header">
             <div class="myntralogo">
-                <a href="homepage"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmmcaLWUtIoeiCAjZIl4sP523Ma23rbm5_TvWLbxGmkDnePtvIy8wsg8ktiMGAUvt1q6c&usqp=CAU" width="42px" height="48px"></a>
+                <a href="/"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmmcaLWUtIoeiCAjZIl4sP523Ma23rbm5_TvWLbxGmkDnePtvIy8wsg8ktiMGAUvt1q6c&usqp=CAU" width="42px" height="48px"></a>
             </div>
             <div class="headcont">
                 <ol class="headerol">
@@ -33,7 +33,7 @@
             <div class="left-bar">
                 <div class="left-div1">
                     <p>Check delivery time & services</p>
-                    <button class="change-add"><a style="color: #ff3f6c;text-decoration: none;" href="address.html">CHANGE ADDRESS</a></button>
+                    <button class="change-add"><a style="color: #ff3f6c;text-decoration: none;" href="address">CHANGE ADDRESS</a></button>
                 </div>
                 <div class="avail-cont">
                     <div class="avail-off">
