--- a/views/myntra_addToBag.ejs
+++ b/views/myntra_addToBag.ejs
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CART</title>
     <link rel="stylesheet" type="text/css" href="css/myntra_addToBag.css">
 </head>
 <body>
     <div id="container">
         <div class="navbar">
             <div class="logo">
-                <a><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmmcaLWUtIoeiCAjZIl4sP523Ma23rbm5_TvWLbxGmkDnePtvIy8wsg8ktiMGAUvt1q6c&usqp=CAU" width="42px" height="48px"></a>
+                <a href="/"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmmcaLWUtIoeiCAjZIl4sP523Ma23rbm5_TvWLbxGmkDnePtvIy8wsg8ktiMGAUvt1q6c&usqp=CAU" width="42px" height="48px"></a>
             </div>
            <div id="a1" class="navlink">
                <a href="">MEN</a>
@@ -25,7 +25,7 @@
            </div>
            <div class="navprofile" style="margin-left: 30px; margin-top: 20px">
             <a href="">Profile</a>
-            <a href="">Wishlist</a>
+            <a href="wishlist">Wishlist</a>
             <a href="">Bag</a>
            </div>
         </div> 
@@ -68,8 +68,8 @@
                     <button  id="d" onclick="back_color_change4()" class="button_align1">XL</button>
                 </Div>
                 <div id="button_align">
-                    <button class="button_align21"><a href="checkout">ADD TO BAG</a></button>
-                    <Button class="button_align22" >WISHLIST</Button>
+                    <button class="button_align21" ><a href="checkout">ADD TO BAG</a></button>
+                    <Button class="button_align22" ><a href="wishlist" style="text-decoration: none;" >WISHLIST</a></Button>
                 </div>
             </div>
         </div>
