--- a/views/wishlist.ejs
+++ b/views/wishlist.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Myntra-WishList</title>
+    <title>WISHLIST</title>
     <link rel="stylesheet" type="text/css" href="css/wishlist_style.css"/>  
 </head>
 <body>
     <div class="navbar">
         <div class="logo">
-            <a href="homepage"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmmcaLWUtIoeiCAjZIl4sP523Ma23rbm5_TvWLbxGmkDnePtvIy8wsg8ktiMGAUvt1q6c&usqp=CAU" width="42px" height="48px"></a>
+            <a href="/"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmmcaLWUtIoeiCAjZIl4sP523Ma23rbm5_TvWLbxGmkDnePtvIy8wsg8ktiMGAUvt1q6c&usqp=CAU" width="42px" height="48px"></a>
         </div>
        <div class="navlink">
            <a href="">MEN</a>
@@ -24,7 +24,7 @@
        </div>
        <div class="navprofile">
         <a href="wishlist">Wishlist</a>
-        <a href="">Bag</a>
+        <a href="myntra_addToBag">Bag</a>
        </div>
     </div>
     <br>
